# risk_awareness_project

./: .gitignore  LRS-MA-Aufgabestellung-Joel Augustin_v1.docx  README.md  box.sdf  frames_2025-12-14_13.08.34.gv  frames_2025-12-14_14.46.20.gv  hello_drake.py  thesis_step_response.csv
src/active_visibility/: CMakeLists.txt  package.xml
src/active_visibility/src/: inspector_node.cpp
src/panda_ign_moveit2/panda_description/config/: initial_joint_positions.yaml
src/panda_ign_moveit2/panda_description/panda/: model.sdf
src/panda_ign_moveit2/panda_description/urdf/: panda.ros2_control  panda.urdf  panda.urdf.xacro  panda_arm.xacro  panda_utils.xacro
src/panda_ign_moveit2/scenarios/: lab_two_cameras.sdf  lab_visibility.sdf  lab_world.sdf  obstacles.sdf
src/thesis_sim/: CMakeLists.txt  package.xml
src/thesis_sim/launch/: moveit.launch.py  sim_pocc_static.launch.py  sim_thesis.launch.py  sim_two_cameras.launch.py  sim_two_robots.launch.py  spawn_dynamic_obstacle.launch.py  voxblox_real.launch.py
src/thesis_sim/scripts/: p_occ_mapper_stage1.py  p_occ_mapper_stage21.py  p_occ_mapper_stage3.py  p_occ_mapper_stage4.py  semantic_cloud_processor.py  semantic_processor.py  semantic_weight_filter.py  smooth_mover.py  step_response_logger.py  step_response_mover.py  thesis_logger.py  tsdf_analyst.py  tsdf_weight_logger.py
src/thesis_sim/src/: move_robot.py
src/thesis_sim/urdf/: red_panda.urdf.xacro  white_panda.urdf.xacro
src/thesis_sim/worlds/: clean_world.sdf  cleaning_table.sdf  green_table.sdf  high_low_scenario.sdf
src/voxblox/voxblox_ros/: CMakeLists.txt
(+16 files in other folders)
